fix: add collapse class to control visibility in CSS

--- a/app/assets/stylesheets/pathogen_view_components.css
+++ b/app/assets/stylesheets/pathogen_view_components.css
@@ -343,6 +343,9 @@
   .pointer-events-none {
     pointer-events: none;
   }
+  .collapse {
+    visibility: collapse;
+  }
   .invisible {
     visibility: hidden;
   }
